--- a/humanoids2018/assets/css/override.css
+++ b/humanoids2018/assets/css/override.css
@@ -414,7 +414,10 @@
 		background-color: #3766c1;
 		color: rgba(255, 255, 255, 0.50);
 		background-attachment: fixed;
-		background-image: url("../../images/bg/overlay.png"), url("../../images/bg/bg3.jpg")
+		background-image: url("../../images/bg/overlay3.png"), url("../../images/bg/snapbot_bg3.jpg");
+	    /* background-image: url("../../images/bg/snapbot_bg3.jpg"); */
+
+		background-position: -300px -300px;
 		/*background-size: cover;
 		/*text-align: center;*/
 	}	
