added photos page

--- a/humanoids2018/assets/css/photos_override.css
+++ b/humanoids2018/assets/css/photos_override.css
@@ -10,12 +10,12 @@
 
     font-family: 'Permanent Marker', cursive;
 	font-size: 48px;
-	color: #ff0000 !important;
+	color: #c9bf3b !important;
 
 	line-height: .8em;
 
 }
 
-	.photobanner {
-	    padding: 8em 0 2em 0 !important;
-	}
+.photobanner {
+    padding: 8em 0 2em 0 !important;
+}
