--- a/humanoids2018/assets/css/override.css
+++ b/humanoids2018/assets/css/override.css
@@ -232,6 +232,8 @@
 	}
 
 
+
+
 	@media screen and (max-width: 1280px) {
 
 		.feature {
@@ -442,7 +444,8 @@
 	}
 
 	#banner {
-		/*padding: 8em 0 6em 0;*/
+
+		padding: 8em 0 5em 0;
 		background-color: #101524;
 		color: rgba(255, 255, 255, 0.50);
 		background-attachment: fixed;
@@ -456,6 +459,17 @@
 		background-color: #ff0000;
 		box-shadow: none;
 		color: #fff !important;
+		
+		min-width: 8em;
+
+		font-size: 2em;
+		line-height: 3.2em;
+		font-weight: 500;
+
+		border-style: solid;
+		border-radius: 0.5em;
+		border-color: #ef9825;
+		border-width: 3px;
 	}	
 
 	#banner p {
